# rcam

./: .env.example  .gitignore  Cargo.toml  README.md  context.sh
config/: default_config.yaml  tatbot.yaml
docs/: hardware.md
docs/design/: gemini.md  gpt.md  grok.md
rcam/: Cargo.toml  README.md
rcam/config/: default_config.yaml
rcam/src/: app_config.rs  camera_config.rs  cli.rs  config_loader.rs  errors.rs  main.rs
rcam/src/camera/: camera_controller.rs  camera_entity.rs  camera_media.rs  mod.rs
rcam/src/common/: file_utils.rs  logging_setup.rs  mod.rs  timestamp_utils.rs
rcam/src/core/: camera_manager.rs  mod.rs
rcam/src/operations/: camera_control_op.rs  diagnostic_op.rs  image_capture_op.rs  mod.rs  time_sync_op.rs  video_record_op.rs
src/: app_config.rs  camera_config.rs  cli.rs  config_loader.rs  errors.rs  main.rs
src/camera/: camera_controller.rs  camera_entity.rs  camera_media.rs  ip_camera_device.rs  mod.rs  realsense_device.rs
src/common/: file_utils.rs  logging_setup.rs  mod.rs  timestamp_utils.rs
src/core/: camera_manager.rs  capture_source.rs  mod.rs
src/operations/: camera_control_op.rs  diagnostic_op.rs  image_capture_op.rs  mod.rs  op_helper.rs  time_sync_op.rs  video_record_op.rs
tests/: common_test_utils.rs
tests/integration/: mod.rs
