[package]
name = "rcam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
opencv = "0.94.4"
image = "0.25.6"
futures = "0.3"
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rerun = "0.23.2"

[dev-dependencies]
