[package]
name = "rcam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
opencv = "0.94.4"
image = "0.24"

[dev-dependencies]
wiremock = "0.5" # For mocking HTTP services in tests 